# polar

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Sub-Terra.sln  Sub-Terra.vcxproj  Sub-Terra.vcxproj.filters  freefall-logo.xcf
AssetBuilder/: AssetBuilder.vcxproj  AssetBuilder.vcxproj.filters
AssetBuilder/src/: main.cpp
Freefall.xcodeproj/: project.pbxproj
Freefall.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Launcher/: Launcher.vcxproj  Launcher.vcxproj.filters
Launcher/src/: main.cpp
Sub-Terra/: Component.h  DrawableComponent.h  EventManager.cpp  EventManager.h  GL32Renderer.cpp  GL32Renderer.h  Job.h  JobManager.cpp  JobManager.h  ModelComponent.h  NoRenderer.cpp  NoRenderer.h  Object.cpp  Object.h  Polar.cpp  Polar.h  Renderer.h  StdOutComponent.h  Sub-Terra.vcxproj  Sub-Terra.vcxproj.filters  SubTerra.cpp  SubTerra.h  System.h  Tag.h  Worker.cpp  Worker.h  gl.h  main.cpp  sdl.h  stdafx.h
Sub-Terra.xcodeproj/: project.pbxproj
Sub-Terra/AssetBuilder/: main.cpp
Sub-Terra/Sub-Terra.xcodeproj/: project.pbxproj
Sub-Terra/Sub-Terra.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Sub-Terra/include/: Allocator.h  AssetManager.h  Atomic.h  AudioManager.h  AudioSource.h  BoundingComponent.h  BoxSprite.h  Chunk.h  ColorComponent.h  Component.h  ConfigManager.h  CreditsSystem.h  DebugManager.h  DeltaTicks.h  EngineStack.h  EngineState.h  EntityBase.h  EventManager.h  Freefall.h  FreefallConfig.h  GL32Renderer.h  HumanPlayerController.h  InputManager.h  Integrable.h  Integrator.h  Job.h  JobManager.h  Key.h  LevelSwitcher.h  Menu.h  MenuSystem.h  ModelComponent.h  NoRenderer.h  Object.h  OpenSimplexNoise.h  OrientationComponent.h  Oscillator.h  PlayerCameraComponent.h  PlayerController.h  Polar.h  (+20 more)
Sub-Terra/resources/: Info.plist
Sub-Terra/resources/Base.lproj/: MainMenu.xib
Sub-Terra/src/: AppDelegate.mm  AudioManager.cpp  Chunk.cpp  Freefall.cpp  GL32Renderer.cpp  HumanPlayerController.cpp  InputManager.cpp  Integrator.cpp  JobManager.cpp  PlayerController.cpp  Polar.cpp  SpatialIndex.cpp  SubTerra.cpp  Worker.cpp  World.cpp  main.cpp
assets/: 0_demo.lvl  1.lvl  2.lvl  2_harder.lvl  bloom.gls  cel.gls  chroma.gls  crosshairs.gls  dof.gls  fog.gls  fxaa.gls  gaussian.gls  hdr.gls  lighting.gls  main.gls  motion.gls  perlin.gls  perlintexture.gls  sine.gls  ssao.gls  text.gls  unified.gls  vignette.gls
cmake/: FindGLEW.cmake  FindGLM.cmake  FindOpenVR.cmake  FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_ttf.cmake  FindVulkan.cmake
include/: Asset.h  AssetManager.h  AudioAsset.h  Component.h  DebugManager.h  EntityBase.h  EventManager.h  FileSystem.h  FontAsset.h  GL32Renderer.h  ImageAsset.h  JobManager.h  Key.h  Level.h  ListAsset.h  ModelComponent.h  NoRenderer.h  Object.h  Polar.h  PositionComponent.h  Renderer.h  ScaleComponent.h  Serializer.h  ShaderAsset.h  ShaderProgramAsset.h  StdOutComponent.h  System.h  TextAsset.h  assets.h  buildinfo.h  common.h  components.h  curl-config-win32.h  debug.h  endian.h  freefall.h  getline.h  gl.h  sdl.h  stdafx.h
include/freefall/: app.h  config.h
include/polar/: AudioSource.h  BoundingComponent.h  DebugManager.h  DeltaTicks.h  Destructor.h  EngineState.h  EntityBase.h  Freefall.h  ImageAsset.h  Integrator.h  Job.h  MenuSystem.h  OpenSimplexNoise.h  OrientationComponent.h  Oscillator.h  PhysicalComponent.h  Property.h  ShaderProgramAsset.h  Sprite.h  System.h  sdl.h  types.h
include/polar/api/: kludge.h
include/polar/asset/: audio.h  base.h  font.h  image.h  level.h  material.h  model.h  shader.h  shaderprogram.h  text.h  triangle.h  uniforms.h  vertex.h
include/polar/component/: audiosource.h  base.h  bounds.h  camera.h  chunk.h  color.h  framebuffer.h  listener.h  material.h  model.h  orientation.h  phys.h  physical.h  playercamera.h  position.h  ref.h  renderable.h  scale.h  scene.h  screenposition.h  stage.h  text.h  texture.h  ttl.h  window.h
include/polar/core/: debugmanager.h  deltaticks.h  destructor.h  ecs.h  id.h  log.h  mutable_component.h  path.h  polar.h  ref.h  registry.h  serializer.h  stack.h  state.h  store.h  types.h
include/polar/fs/: cloud.h  local.h  steam.h
include/polar/math/: constants.h  mat.h  number.h  point.h  quat.h  random.h  triangle.h  types.h
include/polar/node/: base.h  perspective.h
include/polar/property/: base.h  integrable.h
include/polar/system/: action.h  api.h  asset.h  audio.h  base.h  config.h  console.h  controller.h  credits.h  event.h  font.h  input.h  integrator.h  keyboard.h  levelswitcher.h  menu.h  mouse.h  phys.h  sched.h  spatialindex.h  ttl.h  tweener.h  vr.h  work.h  world.h
include/polar/tag/: base.h
include/polar/util/: atomic.h  buildinfo.h  debug.h  endian.h  enumclasshash.h  getline.h  gl.h  pack.h  prioritized.h  raw_vector.h  sdl.h  sharedptr_less.h  vulkan.h
include/pong/: app.h
include/zip/: zip.h
lib/win32/: SDL2_ttf.lib  libboost_date_time-vc140-mt-s-1_64.lib  libboost_system-vc140-mt-s-1_64.lib  libcurl.lib  portaudio.lib  zip.lib  zipstatic.lib  zlib.lib
lib/win64/: portaudio.lib  zlib.lib
resources/: app_build_620280.vdf  depot_build_620281.vdf  game_actions_620280.vdf  run_build_620280.bat  steam_appid.txt
resources/images/: time_century_1.xcf  time_days_1.xcf  time_hours_1.xcf  time_hours_12.xcf  time_hours_2.xcf  time_hours_6.xcf  time_minutes_1.xcf  time_minutes_15.xcf  time_minutes_2.xcf  time_minutes_30.xcf  time_minutes_5.xcf  time_weeks_1.xcf  time_years_1.xcf
src/: AudioManager.cpp  DebugManager.cpp  Freefall.cpp  GL32Renderer.cpp  Integrator.cpp  JobManager.cpp  Object.cpp  OpenSimplexNoise.cpp  Polar.cpp  SubTerra.cpp  Worker.cpp  World.cpp  buildinfo.cpp  freefall.cpp  glew.c  main-assetbuilder.cpp  main-freefall.cpp  main.cpp
src/assetbuilder/: main.cpp
src/freefall/: app.cpp  main.cpp
src/polar/asset/: font.cpp  level.cpp
src/polar/core/: debugmanager.cpp  log.cpp  polar.cpp  ref.cpp  state.cpp  store.cpp
src/polar/fs/: local.cpp
src/polar/system/: audio.cpp  credits.cpp  input.cpp  integrator.cpp  menu.cpp  phys.cpp  work.cpp  (+1 more)
src/pong/: app.cpp  main.cpp
(+86 files in other folders)
